--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-      <header class="header">
-          <%= render 'layouts/header' %>
-          <%= render 'layouts/navbar' %>
-      </header>
+    <header class="header">
+        <%= render 'layouts/header' %>
+        <%= render 'layouts/navbar' %>
+    </header>
+
+    <%= render 'layouts/welcome' if !user_signed_in? %>
 
     <div class="wrapper">
       <div class="main">
