added table column for a user image, takes image from facebook login, displays images on frontpage

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -165,6 +165,24 @@ ul.nav li:first-child {
   width: 100%;
 }
 
+/**** wishlists ****/
+
+.wishlists {
+  list-style: none;
+  text-align: center;
+  display: flex;
+  font-size: 0;
+}
+
+.wishlists li img,
+.wishlists li a {
+  display: block;
+  text-decoration: none;
+  color: black;
+  margin: 2px auto;
+  font-size: 16px;
+}
+
 
 /**** gifts  ****/
 
