--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,10 @@
 
 <ul class="wishlists">
   <% @lists.each do |list| %>
-    <li><%= link_to list.user.username, list_path(list) if list.user != current_user %></li>
+    <% if list.user != current_user %>
+      <li><%= link_to (image_tag list.user.image), list_path(list) %> <br>
+          <%= link_to list.user.username, list_path(list) %></li>
+    <% end %>
   <% end %>
 </ul>
 
