--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -144,6 +144,7 @@ ul.nav li:first-child {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: Arial;
 }
 
 .intro {
