--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,18 +1,21 @@
 <h1><%= @gift.name.capitalize %></h1>
 
-<%= render partial: 'gifts/add_to_wishlist', locals: {gift: @gift} %> <br><br>
+<div class="gift_item">
+  <%= image_tag @gift.image %> <br><br>
 
-<%= image_tag @gift.image %> <br>
-<strong>Price:</strong> <%= number_to_currency(@gift.price) %>
-<h3>Description: </h3><%= @gift.description %> <br>
-<%= link_to "See it on Amazon", @gift.url, target: "_blank" %>
+  <%= @gift.add_a_button %> <br><br>
+  <strong>Price:</strong> <%= number_to_currency(@gift.price) %>
 
-<h3>Categories: </h3>
- <%= render partial: 'categories/list_categories', locals: {categories: @gift.categories} %>
+  <h3>Description: </h3><%= @gift.description %> <br>
+    <%= link_to "See it on Amazon", @gift.url, target: "_blank" %>
 
-<br><br>
-<% if @gift.users.include?(current_user) %>
-  <%= form_for @gift, method: "delete" do |g| %>
-  <%= g.submit "Remove from your Wishlist" %>
+  <h3>Categories: </h3>
+    <%= render partial: 'categories/list_categories', locals: {categories: @gift.categories} %>
+
+  <br><br>
+  <% if @gift.users.include?(current_user) %>
+    <%= form_for @gift, method: "delete" do |g| %>
+    <%= g.submit "Remove from your Wishlist" %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
