--- a/app/views/categories/_list_categories.html.erb
+++ b/app/views/categories/_list_categories.html.erb
@@ -1,3 +1,3 @@
 <% categories.each do |category| %>
-  <%= link_to category.name, category_path(category) %> <br>
+  <%= link_to category.name, category_path(category), class:'category_button' %> <br>
 <% end %>
