--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,8 +2,8 @@
 
 <ul class="gift_list">
   <% @list.gifts.each do |gift| %>
-    <li><%= image_tag gift.image %>
-      <h3><%= link_to gift.name, gift_path(gift) %></h3>
+    <li><%= link_to (image_tag gift.image), gift_path(gift) %>
+      <h4><%= link_to shorten_name(gift.name), gift_path(gift) %></h4>
           <%= button_to "Reviews", gift_reviews_path(gift), method: 'get', class:'card_button' %>
 <% end %>
 </ul>
