--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -194,19 +194,23 @@ ul.nav li:first-child {
 
 .gift_list {
   list-style: none;
-  margin: 0;
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
-  grid-template-rows: repeat(auto-fit, 400px);
-  grid-gap: 1em;
+  width: 800px;
+  margin: 0 auto;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .gift_list li {
   display: inline-block;
+  width: 200px;
+  height: 325px;
   background: white;
   border-radius: 5px;
+  margin: .5em;
   padding: 1.5em;
   position: relative;
+  box-shadow: 3px 3px 5px #888888;
 }
 
 .gift_list li img {
