--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -211,6 +211,7 @@ ul.nav li:first-child {
   padding: 1.5em;
   position: relative;
   box-shadow: 3px 3px 5px #888888;
+  text-decoration: none;
 }
 
 .gift_list li img {
@@ -220,9 +221,10 @@ ul.nav li:first-child {
   max-height:100%;
 }
 
-.gift_list h4 a {
+.gift_list a {
   display: block;
   text-decoration: none;
+  font-weight: bold;
   color: #0F2041;
   text-align: center;
 }
