--- a/app/views/gifts/_aws_search.html.erb
+++ b/app/views/gifts/_aws_search.html.erb
@@ -4,7 +4,8 @@
       <% unless item.is_a?(Array) %>
         <% new_gift = Gift.new_gift_from_amazon(item) %>
         <%= image_tag new_gift.image %> <br>
-        <%= link_to shorten_name(new_gift.name), new_gift.url, target: "_blank" %> | <%= number_to_currency(new_gift.price) %><br>
+        <%= link_to shorten_name(new_gift.name), new_gift.url, target: "_blank" %>
+        <%= link_to number_to_currency(new_gift.price), new_gift.url, target: "_blank" %><br>
         <% new_gift.categories.build(name: item["ItemAttributes"]["Binding"]) %>
         <br><br>
 
