fixed typo: cart to card

--- a/app/views/gifts/_add_to_wishlist.html.erb
+++ b/app/views/gifts/_add_to_wishlist.html.erb
@@ -2,6 +2,6 @@
   <%= button_to "On Your Wishlist", list_path(current_user.list), method: 'get', class: 'card_button_added'%>
 <% else %>
   <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
-    <%= g.submit "Add to Wishlist", class:'cart_button' %>
+    <%= g.submit "Add to Wishlist", class:'card_button' %>
   <% end %> </td>
 <% end %>
