--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -1,8 +1,14 @@
 <% if !user_signed_in? %>
-  <div class="intro_container">
-    <div class="intro">
-      <h1>Welcome to Wishlist!</h1>
-      <h3>Create a wishlist and whatnot</h3>
-    </div>
-  </div>
+  <%= tag.div class:"intro_container" do %>
+    <%= tag.div class:"intro" do %>
+      <%= tag.h1 "Welcome to Wishlist!" %>
+      <%= tag.h3 "Create a wishlist and whatnot" %>
+    <% end %>
+  <% end %>
+<% else %>
+  <%= tag.div class:"welcome_back_container" do %>
+    <%= tag.div class:"welcome_back" do %>
+      <%= tag.h1 "Welcome Back #{current_user.username.humanize}" %>
+    <% end %>
+  <% end %>
 <% end %>
