--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Wishlists#edit</h1>
-<p>Find me in app/views/wishlists/edit.html.erb</p>
+<%= tag.h1 "Edit Your Wishlist Description" %>
+
+<%= tag.div class:"big_box edit_wishlist_desc" do %>
+  <% form_for @list do |l| %>
+  <%= l.label "Tell us about your wishlist:" %><%= tag.br %>
+  <%= l.text_area "description" %><%= tag.br %>
+  <%= l.submit %>
+  <% end %>
+<% end %>
