--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @list.user.username.capitalize %>'s Wishlist</h1>
 
+<%= tag.h2 "About #{@list.user.username.capitalize}'s Wishlist:" %>
+  <%= tag.div class:"big_box wishlist_desc" do %>
+    <%= @list.description %><%= tag.br %>
+    <%= link_to "Edit", edit_list_path %>
+  <% end %>
+
 <ul class="gift_list">
   <% @list.gifts.each do |gift| %>
     <li><%= link_to (image_tag gift.image), gift_path(gift) %>
