--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -245,6 +245,7 @@ ul.nav li:first-child {
   text-align: center;
   font-family: arial;
 }
+
 /**** gifts  ****/
 
 .gift_list {
@@ -309,11 +310,13 @@ ul.nav li:first-child {
   padding: 0.5rem;
   border: none;
   border-radius: 1rem;
+  box-shadow: 3px 3px 5px #888888;
   font-size: 12px;
 }
 
 .gift_item {
   border: 1px solid #0F2041;
+  box-shadow: 3px 3px 5px #888888;
   border-radius: 5px;
   background: white;
   margin: 1em;
