--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,15 +8,23 @@
 
 <% @list.gifts.each do |gift| %>
   <%= tag.div class:"gift_item" do %>
-    <%= tag.div class:"image_and_button" do %>
-      <%= link_to (image_tag gift.image), gift_path(gift) %> <br><br>
-      <%= button_to "Reviews", gift_reviews_path(gift), method: 'get', class:'item_button' %>
-    <% end %>
-
-    <%= tag.div class:"gift_info" do %>
-      <%= tag.h2 link_to "#{gift.name}", gift_path(gift) %>
-      <%= tag.h3 "Description:" %><%= gift.description %> <br><br>
-      <strong>Price:</strong> <%= number_to_currency(gift.price) %><br><br>
+      <% if gift.users.include?(current_user) %>
+        <%= tag.div class:"x" do %>
+          <%= form_for gift, method: "delete" do |g| %>
+            <%= g.submit "X", class:"delete_btn"%>
+          <% end %>
+        <% end %>
+      <% end %>
+    <%= tag.div class:"item_box" do %>
+      <%= tag.div class:"image_and_button" do %>
+        <%= link_to (image_tag gift.image), gift_path(gift) %> <br><br>
+        <%= button_to "Reviews", gift_reviews_path(gift), method: 'get', class:'item_button' %>
+      <% end %>
+      <%= tag.div class:"gift_info" do %>
+        <%= tag.h2 link_to "#{gift.name}", gift_path(gift) %>
+        <%= tag.h3 "Description:" %><%= gift.description %> <br><br>
+        <strong>Price:</strong> <%= number_to_currency(gift.price) %><br><br>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
