--- a/app/views/gifts/_add_to_wishlist.html.erb
+++ b/app/views/gifts/_add_to_wishlist.html.erb
@@ -3,5 +3,5 @@
 <% else %>
   <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
     <%= g.submit "Add to Wishlist", class:'card_button' %>
-  <% end %> </td>
+  <% end %>
 <% end %>
