--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -320,15 +320,20 @@ ul.nav li:first-child {
   background: #135fd8;
 }
 
-.item_button {
+.item_button, .item_button_added {
   width: 200px;
   background: #3366ff;
   color: white;
   padding: 0.5rem;
+  margin: 0 10px;
   border: none;
   border-radius: 1rem;
   box-shadow: 3px 3px 5px #888888;
   font-size: 12px;
+}
+
+.item_button_added {
+  background: #0F2041;
 }
 
 .gift_item {
@@ -353,15 +358,11 @@ ul.nav li:first-child {
 
 .image_and_button {
   width: 30%;
-  padding: 2em;
+  padding: 1em 2em;
 }
 
 .image_and_button img {
   margin: 0 30px;
-}
-
-.image_and_button .item_button {
-  margin: 0 10px;
 }
 
 .category_button {
@@ -445,6 +446,7 @@ ul.nav li:first-child {
 .form {
   background: white;
   border: 1px solid #0F2041;
+  box-shadow: 3px 3px 5px #888888;
   border-radius: 5px;
   margin: 1em;
   padding: 1em;
@@ -458,6 +460,7 @@ ul.nav li:first-child {
   height: 150px;
   border: 1px solid #0F2041;
   border-radius: 5px;
+  font-size: 14px;
 }
 
 p.rating {
