--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Write a New Review</h1>
+<%= tag.h1 "Write a Review for #{@gift.name}" %>
 
   <%= render partial: 'form', locals: {review: @review} %>
